feat: update cargo, add persistent history
